--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "SoarFS"]
 	path = SoarFS
 	url = https://github.com/UCSOAR/SoarFileSystem.git
+[submodule "SoarDrivers"]
+	path = SoarDrivers
+	url = https://github.com/UCSOAR/PeripheralDriversSubmodule.git
