added SoarCommunications submodule branch Conell/QSPI

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "SoarDrivers"]
 	path = SoarDrivers
 	url = https://github.com/UCSOAR/PeripheralDriversSubmodule.git
+[submodule "SoarCommunications"]
+	path = SoarCommunications
+	url = https://github.com/UCSOAR/CommunicationSystemsSubmodule.git
